--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pyshacl>=0.26.0",
     "ollama>=0.2.0",
     "openai>=1.30.5",
+    "termcolor>=2.4.0",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
