--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,21 @@ name = "earth616-ontology"
 version = "0.3.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11"
 dependencies = [
     "pyshacl>=0.29.0",
     "rdflib>=7.1.1",
     "termcolor>=2.5.0",
+    "openai>=1.30.5",
+    "ollama>=0.2.0",
 ]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0",
+    "pre-commit>=2.20",
+]
+
+[build-system]
+requires = ["setuptools>=61.0", "uv>=0.5"]
+build-backend = "setuptools.build_meta"
