--- a/templates/contexts/context-workflow.jsonld.template
+++ b/templates/contexts/context-workflow.jsonld.template
@@ -1,6 +1,6 @@
 {
     "@context": [
-      "https://schema-earth616-ks18.blocks.simbachain.com/nd/scdoc/context/context-base.jsonld",
+      "${CONTEXT_BASE}/context-base.jsonld",
       {
         // Workflow-specific class terms
         "InformationExtractionWorkflow": "dscdo:Informationextractionworkflow",
@@ -88,13 +88,13 @@
         "@id": "dscdo:Informationextractionworkflow",
         "rdfs:label": "InformationExtractionWorkflow",
         "rdfs:comment": "Represents a workflow or process of extracting information from documents.",
-        "sh:shapesGraph": "https://schema-earth616-ks18.blocks.simbachain.com/nd/scdoc/shapes/WorkflowShape-v1.jsonld"
+        "sh:shapesGraph": "${SHAPES_BASE}/WorkflowShape-v1.jsonld"
       },
       {
         "@id": "dscdo:Iepipeline",
         "rdfs:label": "IEPipeline",
         "rdfs:comment": "Represents a pipeline used in the information extraction process.",
-        "sh:shapesGraph": "https://schema-earth616-ks18.blocks.simbachain.com/nd/scdoc/shapes/PipelineShape-v1.jsonld"
+        "sh:shapesGraph": "${SHAPES_BASE}/PipelineShape-v1.jsonld"
       }
     ]
   }
